Update Phone + Email

--- a/index.html
+++ b/index.html
@@ -357,7 +357,6 @@
                         </svg>
                     </div>
                     <div class="contact-details">
-                        <a href="tel:+201148881167">+20 11 4888 1167</a><br>
                         <a href="tel:+201148881167">+20 10 4455 5588</a><br>
                     </div>
                 </div>
@@ -383,7 +382,7 @@
                         </svg>
                     </div>
                     <div class="contact-details">
-                        <a href="mailto:k.kamel_veneda@hotmail.com">k.kamel_veneda@hotmail.com</a><br>
+                        <a href="mailto:k.kamel_venezia@hotmail.com">k.kamel_venezia@hotmail.com</a><br>
                         <a href="https://www.ceramicavenice.eg.com" target="_blank">www.ceramicavenice.eg.com</a>
                     </div>
                 </div>
